# radbuzz

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
application_state/: CMakeLists.txt  application_state.yml  parameters.yml
application_state/include/: configuration_settings.hh  gps_data.hh  tile_constants.hh
esp32/: CMakeLists.txt
esp32/ble_server_esp32/: CMakeLists.txt  ble_server_esp32.cc
esp32/ble_server_esp32/include/: ble_server_esp32.hh
esp32/esp32p4/: CMakeLists.txt  lv_conf.h  partitions.csv  sdkconfig
esp32/esp32p4/main/: CMakeLists.txt  idf_component.yml  main.cc
esp32/input_esp32/: CMakeLists.txt  input_esp32.cc
esp32/input_esp32/include/: input_esp32.hh
esp32/qualia_esp32s3/: CMakeLists.txt  lv_conf.h  sdkconfig
esp32/qualia_esp32s3/main/: CMakeLists.txt  idf_component.yml  main.cc
esp32/waveshare_esp32s3/: CMakeLists.txt  lv_conf.h  sdkconfig
esp32/waveshare_esp32s3/main/: CMakeLists.txt  main.cc
esp32/waveshare_p4_touch_4_3/: CMakeLists.txt  lv_conf.h  partitions.csv  sdkconfig
esp32/waveshare_p4_touch_4_3/main/: CMakeLists.txt  idf_component.yml  main.cc
esp32/wifi_client_esp32/: CMakeLists.txt  wifi_client_esp32.cc
esp32/wifi_client_esp32/include/: wifi_client_esp32.hh
qt/: CMakeLists.txt  display_qt.cc  display_qt.hh  lv_conf.h  simulator_main.cc  simulator_mainwindow.cc  simulator_mainwindow.hh  simulator_mainwindow.ui  speedometer_qt.cc  speedometer_qt.hh
qt/ble_server_host/: ble_server_host.cc
qt/ble_server_host/include/: ble_server_host.hh
qt/wifi_client_host/: CMakeLists.txt  wifi_client_host.cc
qt/wifi_client_host/include/: wifi_client_host.hh
rust/wifi_handler/: Cargo.toml  build.rs  config.toml
rust/wifi_handler/src/: lib.rs
src/: CMakeLists.txt
src/app_simulator/: CMakeLists.txt  app_simulator.cc
src/app_simulator/include/: app_simulator.hh
src/application_state/: CMakeLists.txt  application_state.cc  generate_application_state.py  generated_application_state.cc.jinja2  generated_application_state.hh.jinja2
src/application_state/include/: application_state.hh
src/ble_handler/: CMakeLists.txt  ble_handler.cc  king_shark_bms_protocol.md  king_shark_bms_state_machine.pu  king_shark_packet_protocol.cc  king_shark_packet_protocol.hh
src/ble_handler/include/: ble_handler.hh
src/ble_injector/: CMakeLists.txt  ble_injector.cc
src/ble_injector/include/: ble_injector.hh
src/ble_server_host/: CMakeLists.txt  ble_server_host.cc
src/ble_server_host/include/: ble_server_host.hh
src/buzz_handler/: CMakeLists.txt  buzz_handler.cc  buzz_handler_state_machine.pu
src/buzz_handler/include/: buzz_handler.hh
src/can_bus_handler/: CMakeLists.txt  can_bus_handler.cc
src/can_bus_handler/include/: can_bus_handler.hh
src/gps_reader/: CMakeLists.txt  gps_reader.cc
src/gps_reader/include/: gps_reader.hh
src/image_cache/: CMakeLists.txt  image_cache.cc
src/image_cache/include/: image_cache.hh
src/include/: split_string.hh
src/include/hal/: i_ble_client.hh  i_ble_server.hh  i_input.hh  i_wifi_client.hh  uuid_helper.hh
src/input/: CMakeLists.txt  input.cc
src/input/include/: input.hh
src/speedometer_handler/: CMakeLists.txt  speedometer_handler.cc
src/speedometer_handler/include/: speedometer_handler.hh
src/storage/: CMakeLists.txt  storage.cc
src/storage/include/: storage.hh
src/tile_cache/: CMakeLists.txt  tile_cache.cc  tile_cache_state_machine.pu
src/tile_cache/include/: tile_cache.hh
src/trip_computer/: CMakeLists.txt  trip_computer.cc
src/trip_computer/include/: trip_computer.hh
src/user_interface/: CMakeLists.txt  map_screen.cc  map_screen.hh  settings_menu_screen.cc  settings_menu_screen.hh  trip_meter_screen.cc  trip_meter_screen.hh  user_interface.cc
src/user_interface/include/: user_interface.hh
src/wgs84_to_osm_point/: CMakeLists.txt  wgs84_to_osm_point.cc
src/wgs84_to_osm_point/include/: wgs84_to_osm_point.hh
src/wifi_handler/: CMakeLists.txt  wifi_handler.cc  wifi_state_machine.pu
src/wifi_handler/include/: wifi_handler.hh
test/unittest/: CMakeLists.txt  lv_conf.h  test_application_state.cc  test_ble_handler.cc  test_king_shark_packet_protocol.cc  test_speedometer_handler.cc  test_tile_cache.cc  test_trip_computer.cc  thread_fixture.hh  unittest_parameters.yml
