[package]
name = "wifi_handler"
edition = "2024"

[lib]
crate-type = ["staticlib"]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
#default = ["std", "esp-idf-sys/native"]

#std = ["esp-idf-sys/std"]

[dependencies]
#esp-idf-sys = { version = "0.36.1", default-features = false }
log = "0.4"
#link-cplusplus = { version = "1" }
autocxx = "0.30.0"
cxx = "1.0"
embassy-executor = "0.9.1"

[build-dependencies]
bindgen = "0.71.0"
embuild = "0.33.1"
autocxx-build = "0.30.0"
miette = { version = "5", features = ["fancy"] }
