[package]
name = "wifi_handler"
edition = "2024"

[lib]
name = "wifi_handler"
crate-type = ["staticlib"]
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
#default = ["std", "esp-idf-sys/native"]

#std = ["esp-idf-sys/std"]

[dependencies]
#esp-idf-sys = { version = "0.36.1", default-features = false }
log = "0.4"
ffi_helpers = "0.3.0"
embassy-executor = {version = "0.9.1", features = [
    "arch-std",
    "executor-thread",
] }
static_cell = "2"
state-machines = {version = "0.8.0", features = ["dynamic"]}
statig = {version = "0.4.1", features = ["async"] }

[build-dependencies]
bindgen = "0.72.1"
embuild = "0.33.1"
